test/modules/deitz/test_module_access2.good
test_module_access2.chpl:13: error: Symbol 'x' undeclared in module 'M'
